--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,21 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <!-- <h1>My Store</h1> -->
-      <a class="navbar-brand" href="#">My Store</a>
+      <a class="navbar-brand" routerLink="">My Store</a>
       <img src="assets/cart.png" width="50" height="50" class="d-inline-block align-top">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav" >
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
+          <!-- <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]= "{exact:true}" >
+            <a class="nav-link" routerLink="">Home <span class="sr-only">(current)</span></a>
+          </li> -->
           
-          <li class="nav-item">
-            <a class="nav-link" href="#">Product</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tab index="-1" aria-disabled="true">checkout</a>
+          <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]= "{exact:true}">
+            <a class="nav-link" routerLink="">Product</a>
+          </li> 
+          <li class="nav-item" routerLinkActive="active"[routerLinkActiveOptions]= "{exact:true}">
+            <a class="nav-link" routerLink="checkout" tab index="-1" aria-disabled="true">checkout</a>
           </li>
            <li class="nav-item">
             <button type="button" class="btn btn-warning">My cart</button>
