--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,1 +1,3 @@
-<input class="form-control form-control-lg" type="text" placeholder="search">
+<input [(ngModel)]="search" class="form-control form-control-lg" type="text" placeholder="search">
+<p>{{search}}</p>
+<!-- to see what we type -->
